# fair_spoke_8

./: .gitignore  README.md  pyproject.toml  setup.cfg
data_quality_pipeline/: .gitignore  README.md  download_models.sh  kill_ray.sh  pyproject.toml  setup.cfg  start_ray_multinode.sh
data_quality_pipeline/benchmark/: decode_dataset.py  end_to_end_single_node.py  single_node.py  viz.py
data_quality_pipeline/examples/: multimodal.py  ray_actor.py  ray_function.py  split_data.py
data_quality_pipeline/src/made/: config.py  config.yaml  paths.py
data_quality_pipeline/src/made/data_pipeline/: common.py  config.py  logger.py  pipeline.py  utils.py
data_quality_pipeline/src/made/data_pipeline/data/: datacomp_handler.py
data_quality_pipeline/src/made/data_pipeline/metrics/: metrics_collector.py  metrics_decorators.py  metrics_store.py  utils.py
data_quality_pipeline/src/made/data_pipeline/steps/: base.py  multimodal.py  multimodal_filtering.py  specificity_filtering.py  unimodal_language.py  unimodal_text_filtering.py  unimodal_vision.py  unimodal_vision_filtering.py
data_quality_pipeline/src/made/models/: common_pos_patterns.txt
data_quality_pipeline/src/spoke8leonardo/data_pipeline/: pipeline.py
data_quality_pipeline/src/spoke8leonardo/data_pipeline/steps/: unimodal_vision.py
data_quality_pipeline/test/: conftest.py  test_decode_dataset.py  test_made.py  test_multimodal_filtering.py  test_pipeline.py  test_unimodal_text_filtering.py  test_unimodal_vision_filtering.py  test_webdataset_reader.py
data_quality_pipeline/test/data/: README.md  reduce_tar_size.py
datacomp_download/: .gitignore  README.md  download_datacomp_small.sh  pyproject.toml
datacomp_download/datacomp_sample_example/: 000000009999.json  000000009999.txt
datacomp_download/src/: download_datacomp_small.sh  download_upstream.py  requirements.txt
datacomp_download/src/datacomp_download/: download_upstream.py
datacomp_download/src/wandb/: latest-run
datacomp_download/src/wandb/run-20241223_195835-udq7linv/: run-udq7linv.wandb
datacomp_download/src/wandb/run-20241223_195835-udq7linv/files/: config.yaml
datacomp_download/src/wandb/run-20241223_200556-27gc0caz/: run-27gc0caz.wandb
datacomp_download/src/wandb/run-20241223_200556-27gc0caz/files/: conda-environment.yaml  requirements.txt  wandb-metadata.json
datacomp_download/src/wandb/run-20241223_200654-49jfdmxp/: run-49jfdmxp.wandb
datacomp_download/src/wandb/run-20241223_200654-49jfdmxp/files/: config.yaml  wandb-metadata.json
datacomp_download/src/wandb/run-20241223_202416-1ql4ettk/: run-1ql4ettk.wandb
datacomp_download/src/wandb/run-20241223_202416-1ql4ettk/files/: config.yaml
datacomp_download/src/wandb/run-20250114_141728-2w6hucrj/: run-2w6hucrj.wandb
datacomp_download/src/wandb/run-20250114_141728-2w6hucrj/files/: config.yaml
datacomp_download/src/wandb/run-20250114_144901-1ppac67y/: run-1ppac67y.wandb
datacomp_download/src/wandb/run-20250114_144901-1ppac67y/files/: config.yaml
experiments/: .gitignore  datacomp_exploration.ipynb  eda.ipynb  load_datacomp_webdataset_shards.ipynb
fair_spoke_8_leonardo/datacomp_download/: download_upstream.py  exploration.py
fair_spoke_8_leonardo/notebooks/: eda.ipynb
fair_spoke_8_leonardo/scripts/: download_laion_hd_subset.py
meru/CLIP-Guided-Diffusion/: generate_diffuse.py
meru/hype/: hype.ipynb  hyperbolic.py  requirements.txt
myenv/: pyvenv.cfg
myenv/Scripts/: Activate.ps1  activate  activate.bat
src/spoke8leonardo/: __init__.py
src/spoke8leonardo/data_pipeline/: config.py
src/spoke8leonardo/datacomp_download/: exploration.py
src/spoke8leonardo/notebooks/: eda.ipynb
src/spoke8leonardo/scripts/: download_laion_hd_subset.py
(+4 files in other folders)
