[project]
name = "fair-spoke-8"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub==0.13.4",
    "img2dataset>=1.45.0",
    "ray[data]>=2.40.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Repository" = "https://github.com/LeoBaro/fair_spoke_8"
"Issues" = "https://github.com/LeoBaro/fair_spoke_8/issues"
